--- a/BUILD.gn
+++ b/BUILD.gn
@@ -681,12 +681,14 @@ group("gn_all") {
       ]
     }
 
+    if (!is_starboard) {
     if (is_mac || is_win || is_android || is_linux || is_chromeos) {
       deps += [
         "//third_party/crashpad/crashpad:crashpad_tests",
         "//third_party/crashpad/crashpad/handler:crashpad_handler",
         "//third_party/crashpad/crashpad/tools:crashpad_database_util",
       ]
+    }
     }
 
     if (enable_message_center) {
