--- a/chrome/installer/linux/BUILD.gn
+++ b/chrome/installer/linux/BUILD.gn
@@ -212,9 +212,11 @@ strip_binary("strip_libGLESv2_shlib") {
   deps = [ "//third_party/angle:libGLESv2" ]
 }
 
+if (angle_shared_libvulkan) {
 strip_binary("strip_libvulkan_shlib") {
   binary_input = "$root_out_dir/libvulkan.so.1"
   deps = [ "//third_party/vulkan-deps/vulkan-loader/src:libvulkan" ]
+}
 }
 
 strip_binary("strip_libvk_swiftshader.shlib") {
